[gd_scene load_steps=6 format=3 uid="uid://ms1eck80yiwn"]

[ext_resource type="Script" uid="uid://dcqom7nm8w04k" path="res://scenes/number_square.gd" id="1_qmd2u"]
[ext_resource type="Texture2D" uid="uid://bqn3jk73eivpp" path="res://assets/Square.png" id="1_rb13l"]
[ext_resource type="Texture2D" uid="uid://drkewdjqv3p76" path="res://assets/Floor_margins.png" id="3_0thag"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qmd2u"]
size = Vector2(64, 64)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_qmd2u"]
polygon = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)

[node name="Square" type="StaticBody2D"]
script = ExtResource("1_qmd2u")

[node name="SquareSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("1_rb13l")

[node name="LockSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
scale = Vector2(1.1, 1.1)
texture = ExtResource("3_0thag")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_qmd2u")

[node name="NumberLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.5
offset_top = -22.5
offset_right = 23.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0.3764706, 0.3764706, 0.4392157, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 40
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource("OccluderPolygon2D_qmd2u")
